--- a/PMS-PropertyHapa/Views/Auth/Index2.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Index2.cshtml
@@ -1,146 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    Layout = "~/Views/Shared/_IdentityLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     string username = ViewData["Username"] as string;
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Zeta admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
-    <meta name="keywords" content="admin template, Zeta admin template, dashboard template, flat admin template, responsive admin template, web app">
-    <meta name="author" content="pixelstrap">
-    <link rel="icon" href="../assets/images/logo/favicon-icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/logo/favicon-icon.png" type="image/x-icon">
-    <title>Zeta admin dashboard </title>
-    <!-- Google font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/font-awesome.css">
-    <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
-    <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
-    <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
-    <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
-    <!-- Plugins css start-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/animate.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/owlcarousel.css">
-    <!-- Plugins css Ends-->
-    <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
-    <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
-    <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
-</head>
-<body class="landing-wrraper">
-    <!-- tap on top starts-->
-    <div class="tap-top"><i data-feather="chevrons-up"></i></div>
-    <!-- tap on tap ends-->
-    <!-- page-wrapper Start-->
-    <div class="page-wrapper landing-page">
-        <!-- header start-->
-        <header class="landing-header">
-            <div class="custom-container">
-                <div class="row">
-                    <div class="col-12">
-                        <nav class="navbar navbar-light p-0" id="navbar-example2">
-                            <a class="navbar-brand" href="javascript:void(0)"> <img class="img-fluid" src="../assets/images/logo/logo_dark.png" alt=""></a>
-                            <ul class="landing-menu nav nav-pills">
-                                <li class="nav-item menu-back">back<i class="fa fa-angle-right"></i></li>
-                                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#framework">Frameworks</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#core-feature">Core Feature</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#Applications">Applications</a></li>
-                                <li class="nav-item"><a class="nav-link" href="http://docs.pixelstrap.com/zeta/document/">Documentation</a></li>
-                                <li class="nav-item"><a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSe6hKUXw_By-pg7yabL0FxoTM02ZPTxoXy8PE3yboRuUCuyeA/viewform?">Hire US</a></li>
-                            </ul>
-                            <div class="buy-block">
-                                <a class="btn-landing btn-white">Go To PMC Portal</a>
-                                <div class="toggle-menu"><i class="fa fa-bars"></i></div>
-                            </div>
 
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- header end-->
-        <!-- landing home start-->
-        <section class="landing-home" id="home">
-            <img class="img-fluid bg-img-cover" src="../assets/images/landing/landing-home/home-bg.png" alt="">
-            <div class="custom-container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="landing-home-contain">
-                            <div>
-
-                                <h2><span>Welcome, @username! to Property Happa</span></h2>
-                                @*   <p> Zeta is Perfect Admin template for any business. it has all features and modules to create your amazing C-panel. this template for selling Default, Crypto, Ecommerce etc......</p> *@
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <ul class="animat-block">
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/1.png" alt=""></li>
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/2.jpg" alt=""></li>
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/3.jpg" alt=""></li>
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/circle.png" alt=""></li>
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/circle.png" alt=""></li>
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/react-orange.png" alt=""></li>
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/react-yellow.png" alt=""></li>
-                <li><img class="img-fluid" src="../assets/images/landing/landing-home/react-yellow.png" alt=""></li>
-            </ul>
-        </section>
-        <!-- Container-fluid starts-->
-      
-        <!-- unic-cards end-->
-        <!--footer start-->
-        <section class="landing-footer section-py-space" id="footer">
-            <div class="custom-container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="footer-contain">
-                            <p class="mb-0">Copyright 2024 © Property Happa</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--footer end-->
-    </div>
-    <!-- latest jquery-->
-    <script src="../assets/js/jquery-3.5.1.min.js"></script>
-    <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
-    <!-- feather icon js-->
-    <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
-    <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
-    <!-- scrollbar js-->
-    <!-- Sidebar jquery-->
-    <script src="../assets/js/config.js"></script>
-    <!-- Plugins JS start-->
-    <script src="../assets/js/animation/scroll-reveal/scrollreveal.min.js"></script>
-    <script src="../assets/js/modernizr.js"></script>
-    <script src="../assets/js/animation/scroll-reveal/reveal-custom.js"></script>
-    <script src="../assets/js/owlcarousel/owl.carousel.js"></script>
-    <script src="../assets/js/owlcarousel/owl-custom.js"></script>
-    <script src="../assets/js/animation/wow/wow.min.js"></script>
-    <script src="../assets/js/landing_sticky.js"></script>
-    <script src="../assets/js/landing.js"></script>
-    <!-- Plugins JS Ends-->
-    <!-- Theme js-->
-    <script src="../assets/js/script.js"></script>
-    <!-- login js-->
-    <!-- Plugin used-->
-</body>
-</html>
+<div class="text-center">
+    <h2>Welcome, @username! to Property Happa</h2>
+    <p><a href="@Url.Action("Login", "Auth")" class="btn btn-primary">Click here to login to your PMC Portal</a></p>
+</div>
