--- a/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
@@ -56,8 +56,8 @@
                                 <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
                                 <li class="nav-item"><a class="nav-link" href="">Contact Us</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">Login</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">Sign Up</a></li>
+                                <li class="nav-item"><a class="nav-link" href="Auth/Login">Login</a></li>
+                                <li class="nav-item"><a class="nav-link" href="Auth/Register">Sign Up</a></li>
                             </ul>
                             <div class="buy-block">
                                 <a class="btn-landing btn-white">Go To PMC Portal</a>
