--- a/PMS-PropertyHapa.Staff/Views/Subscriptions/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Subscriptions/Index.cshtml
@@ -135,43 +135,6 @@
     </div>
 </div>
 
-@* 
-<div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="stripeModalLabel">Checkout</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form id="payment-form">
-                <p class="d-none" id="product-Id"></p>
-                <label for="name">Name</label>
-                <input id="name" placeholder="Jenny Rosen" value="Jenny Rosen" required />
-
-                <label for="card-element">Card</label>
-                <div id="card-element"></div>
-                <div id="card-errors" role="alert"></div>
-
-                <div id="product-details">
-                    <h6 id="product-title"></h6>
-                    <p id="product-description"></p>
-                    <div id="price-section">
-                        <img id="price-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG_TUukNvS-0E486weXLkJDpTubsAcdHdmKw&usqp=CAU" alt="Price Image" />
-                        <p class="d-none" id="product-price"></p>
-                        <p id="product-priceText"></p>
-                    </div>
-                </div>
-
-                <button id="submit">Pay</button>
-            </form>
-
-            <div id="messages" role="alert" style="display: none;"></div>
-        </div>
-    </div>
-</div>
- *@
-
-
 <!-- Modal HTML -->
 <div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -220,50 +183,6 @@
         </div>
     </div>
 </div> 
-
-@* <div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="stripeModalLabel">Checkout</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form id="payment-form" class="p-3">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input id="name" class="form-control" placeholder="Jenny Rosen" value="Jenny Rosen" required />
-                </div>
-
-                <div class="mb-3">
-                    <label for="card-element" class="form-label">Card</label>
-                    <div id="card-element" class="form-control"></div> <!-- Stripe Element will be mounted here -->
-                    <div id="card-errors" class="text-danger mt-2" role="alert"></div> <!-- Display errors -->
-                </div>
-
-                <div id="product-details" class="mb-3">
-                    <h6 id="product-title"></h6>
-                    <p id="product-description"></p>
-                    <div id="price-section" class="d-flex align-items-center">
-                        <img id="price-image" class="me-3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG_TUukNvS-0E486weXLkJDpTubsAcdHdmKw&usqp=CAU" alt="Price Image" style="width: 50px; height: 50px;" />
-                        <div>
-                            <p class="d-none" id="product-price"></p>
-                            <p id="product-priceText" class="mb-0"></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary" id="submit">Pay</button>
-                </div>
-            </form>
-
-            <div id="messages" role="alert" style="display: none;" class="alert alert-danger mt-3"></div>
-        </div>
-    </div>
-</div> *@
-
-
-
 
 <script src="https://js.stripe.com/v3/"></script>
 <script>
@@ -349,7 +268,7 @@
                         console.error('Subscription creation failed:', subscriptionResult.error);
                     } else {
                         console.log('Subscription created successfully!');
-                        location.reload();
+                        window.location = '/Subscriptions/Success';
                     }
                 }
             } catch (error) {
