--- a/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
@@ -153,7 +153,7 @@
             </div>
             <div class="row">
                 <div class="col-xl-3 col-md-6">
-                    <div class="card border">
+                    <div class="card border p-2">
                         <a href="@Url.Action("Index","Landlord")">
                             <h2 class="ml-5 mt-4 fs-3 fw-bold">@ViewBag.totalLandlords</h2>
                             <div class="d-flex flex-row-reverse mr-5 ">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6">
-                    <div class="card border">
+                    <div class="card border p-2">
                         <a href="@Url.Action("Index","Tenant")">
                             <div class="card-block-small">
                                 <h2 class="ml-5 mt-4 fs-3 fw-bold">@ViewBag.totalTenants</h2>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6">
-                    <div class="card border">
+                    <div class="card border p-2">
                         <a href="@Url.Action("Index","Assests")">
                             <div class="card-block-small">
                                 <h2 class="ml-5 mt-4 fs-3 fw-bold">@ViewBag.totalAssets</h2>
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6">
-                    <div class="card border">
+                    <div class="card border p-2">
                         <a href="@Url.Action("Index","Lease")">
                             <div class="card-block-small">
                                 <h2 class="ml-5 mt-4 fs-3 fw-bold">@ViewBag.totalInvoices</h2>
@@ -218,8 +218,6 @@
                     </div>
                 </div>
             </div>
-            @using System.Collections.Generic
-            @using PMS_PropertyHapa.Models.DTO
 
             <div class="col-xl-4 col-md-4 dash-xl-50">
                 <div class="card news-update d-flex align-items-stretch h-80" style="height: 510px;">
@@ -682,11 +680,7 @@
             success: function (response) {
                 if (response.success) {
                     var labels = response.labels;
-                    console.log("labels");
-                    console.log(labels);
                     var series = [response.series];
-                    console.log("series");
-                    console.log(series);
                     new Chartist.Line('#activeCustomerChart', {
                         labels: labels,
                         series: series
@@ -705,7 +699,6 @@
     }
 
     function loadLeadChart() {
-        alert()
         google.charts.load('current', { 'packages': ['corechart', 'line'] });
         google.charts.setOnLoadCallback(drawChart);
 
